# open-embodied-intelligence

./: .env.example  .gitignore  BUGFIX_REPORT.md  CONTRIBUTING.md  README.md  h  main.py  pyproject.toml  requirements.txt
.github/workflows/: openei-ci.yml
archive/code/legacy-228/: assistant.py  music_analyzer.py  robot_controller.py
archive/code/legacy-229/: assistant.py  robot_controller.py
archive/code/spike-302-latency/: deploy.py
archive/code/spike-304-aliyun/: .env.example  (+1 more)
config/: __init__.py  api_config.py  audio_config.py  dance_config.py  runtime_config.py  settings.py
core/: __init__.py  beat_tracker.py  choreographer.py  music_analyzer.py
dance/: __init__.py  action_library.py  robot_controller.py  serial_driver.py
data/: actions.csv
docs/: demo_rehearsal.md
docs/cleanup/: decision-matrix.md  merge-candidates.md
docs/openei/: architecture.md  extension-guide.md  roadmap.md  status-gap-plan.md
examples/dance_demo/: README.md  run.py
scripts/: run_demo.ps1  run_demo.sh
src/openei/: __init__.py  __main__.py  config.py  contracts.py  feedback.py  logging.py  ports.py
tests/: test_action_library.py  test_beat_tracker.py  test_command_parsing.py  test_startup_checks.py
tests/openei/: test_announce_skill.py  test_brain.py  test_cli.py  test_config.py  test_control_simulation.py  test_registry.py  test_runtime_contracts.py  test_runtime_integration.py  test_safety.py
utils/: __init__.py  helpers.py  logger.py  startup_checks.py
voice/: __init__.py  assistant.py  intents.py  recording.py  speech_recognition.py  text_to_speech.py
(+48 files in other folders)
